--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-components": "npx generate-react-cli component TodoList TodoItem AddTodoForm Button TodoCounter TodoSearch"
   },
   "eslintConfig": {
     "extends": [
