se agregan modificaciones en estilo pra los botones del formulario y modal

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "generate-components": "npx generate-react-cli component TodoList TodoItem AddTodoForm Button TodoCounter TodoSearch"
   },
   "eslintConfig": {
@@ -30,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": ".",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
